# scrapile

./: .gitattributes  .gitignore  Cargo.toml  README.md  benchmark.srpl  example.srpl  flake.nix  next-todo.txt
examples/: brainfuck.srpl  showcase.srpl
src/: cli.rs  lang.rs  lib.rs  main.rs  scratch.rs
src/lang/: error.rs  parser.rs  token.rs  typed.rs
src/lang/error/: parser.rs  typed.rs
src/lang/parser/: block.rs  expr.rs  function.rs  ident.rs  ifstmt.rs  list.rs  root.rs  stmt.rs  tuple.rs  types.rs  variables.rs  whilestmt.rs
src/lang/targets/: scratch.rs
src/lang/typed/: block.rs  builtin.rs  expr.rs  function.rs  root.rs  stmt.rs  stype.rs  symbol_table.rs  types.rs
src/scratch/: assembler.rs  block.rs  cond.rs  expr.rs  procedure.rs  statement.rs
tree-sitter-scrapile/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-scrapile/bindings/c/: tree-sitter-scrapile.pc.in
tree-sitter-scrapile/bindings/go/: binding.go  binding_test.go
tree-sitter-scrapile/bindings/node/: binding.cc
tree-sitter-scrapile/bindings/python/tests/: test_binding.py
tree-sitter-scrapile/bindings/python/tree_sitter_scrapile/: __init__.py  binding.c
tree-sitter-scrapile/bindings/rust/: build.rs  lib.rs
tree-sitter-scrapile/bindings/swift/TreeSitterScrapile/: scrapile.h
tree-sitter-scrapile/bindings/swift/TreeSitterScrapileTests/: TreeSitterScrapileTests.swift
tree-sitter-scrapile/src/: grammar.json  parser.c
