[package]
name = "scrapile"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A somewhat fully-fleged rust-like programming language that, surprisingly, compiles to scratch"
authors = [ "kalscium <kalscium@protonmail.com>" ]
repository = "https://github.com/kalscium/scrapile"
keywords = [ "language", "compiled", "scratch", "toy-language", "compiler" ]
categories = [ "parser-implementations" ]

[dependencies]
ketchup = "1.1.0"
logos = "0.14"
zip = "2.1"
json = "0.12"
ariadne = "0.4"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
