[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-scrapile"
description = "A somewhat fully-fleged rust-like programming language that, surprisingly, compiles to scratch"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "scrapile"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "kalscium", email = "kalscium@protonmail.com" }]
requires-python = ">=3.9"
license.text = "GPL-3.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/kalscium/scrapile"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
